--- a/mod.yaml
+++ b/mod.yaml
@@ -1,3 +1,3 @@
-title: "Test Mod" 
-description: "Just testing"
-staticID: "testMod" 
+title: "Insulated Self Sealing AirLock" 
+description: "The lowered thermal conductivity of insulated door block any liquid, gas and heat passing through them."
+staticID: "InsulatedSelfSealingAirLock" 
