--- a/ONIInsulatedSelfSealingAirLock.csproj
+++ b/ONIInsulatedSelfSealingAirLock.csproj
@@ -34,10 +34,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>false</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
+    <DebugType>none</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
@@ -85,10 +85,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimFix_OnPrefabInit.cs" />
-    <Compile Include="InsulatedSelfSealingAirLock.cs" />
+    <Compile Include="Db_Initialize.cs" />
+    <Compile Include="Door_OnCleanUp.cs" />
+    <Compile Include="Door_SetSimState.cs" />
     <Compile Include="InsulatedSelfSealingAirLockConfig.cs" />
-    <Compile Include="InsulatedSelfSealingAirLock_SetSimState.cs" />
-    <Compile Include="Patches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
