--- a/mod_info.yaml
+++ b/mod_info.yaml
@@ -1,4 +1,4 @@
-supportedContent: ALL
-minimumSupportedBuild: 469112
-version: 1.0.0
+supportedContent: EXPANSION1_ID
+minimumSupportedBuild: 496912
+version: 1.0.1
 APIVersion: 2
