Support base game

--- a/ONIInsulatedSelfSealingAirLock.csproj
+++ b/ONIInsulatedSelfSealingAirLock.csproj
@@ -110,6 +110,9 @@
     <Content Include="anim\assets\Insulated_door_manual\Insulated_door_manual_0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="preview.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
