--- a/mod_info.yaml
+++ b/mod_info.yaml
@@ -1,4 +1,4 @@
-supportedContent: EXPANSION1_ID
+supportedContent: ALL
 minimumSupportedBuild: 496912
-version: 1.0.1
+version: 1.0.2
 APIVersion: 2
